--- a/virtual-host.conf
+++ b/virtual-host.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
   ServerName localhost
 
-  DocumentRoot "/home/johnio/Dropbox/Websites/Sites-Johnnycat/dev/newfolio.dev"
+  DocumentRoot "/home/johnio/Dropbox/Websites/Sites-Johnnycat/dev/newfolio.dev/src/"
 
 </VirtualHost>
